--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: cornflowerblue;
 }
 
 .container {
@@ -58,4 +59,5 @@ body {
 
 .delete_task i {
     cursor: pointer;
+    margin-left: 5px;
 }
